improve combatlog performance